--- a/index.html
+++ b/index.html
@@ -3,29 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles.css" type="text/css">
   <title>Frontend Mentor | Fylo data storage component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  You’ve used 815 GB of your storage
-
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main class="card-container">
+    <section class="card card--top">
+      <img src="./images/logo.svg" alt="Fylo logo" class="card__logo">
+      <div class="card__icons">
+        <div class="icon">
+          <img src="./images/icon-document.svg" alt="document icon"></img>
+        </div>  
+        <div class="icon">
+          <img src="./images/icon-folder.svg" alt="folder icon"></img>
+        </div> 
+        <div class="icon">
+          <img src="./images/icon-upload.svg" alt="upload icon"></img>
+        </div> 
+      </div>
+    </section>
+    <section class="card card--bottom">
+      <p>
+        You've used <span class="storage">815 GB</span> of your storage
+      </p>
+      <div class="progress-bar">
+        <div class="progress-bar__fill"></div>
+      </div>
+      <p class="storage-values">
+        <span class="storage storage--min">0 GB</span>
+        <span class="storage storage--max">1000 GB</span>
+      </p>
+      <div class="storage-info">
+        <span class="storage-info__left">185</span>
+        <span class="storage-info__right">gb left</span>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
