--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles.css" type="text/css">
   <title>Frontend Mentor | Fylo data storage component</title>
 </head>
+
 <body>
   <main class="card-container">
     <section class="card card--top">
@@ -14,13 +17,13 @@
       <div class="card__icons">
         <div class="icon">
           <img src="./images/icon-document.svg" alt="document icon"></img>
-        </div>  
+        </div>
         <div class="icon">
           <img src="./images/icon-folder.svg" alt="folder icon"></img>
-        </div> 
+        </div>
         <div class="icon">
           <img src="./images/icon-upload.svg" alt="upload icon"></img>
-        </div> 
+        </div>
       </div>
     </section>
     <section class="card card--bottom">
@@ -41,4 +44,5 @@
     </section>
   </main>
 </body>
+
 </html>
